<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:background="#dddddd"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_MyPhoto"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_width="@dimen/profile_photo_width"
                android:layout_height="@dimen/profile_photo_height"
                android:src="@drawable/persion_icon" />

            <TextView
                android:id="@+id/tv_Name"
                android:singleLine="true"
                android:textSize="26sp"
                android:textColor="#333333"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/privateInfoGroup"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- 이곳에 개인신상 정보를 보여준다 -->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_birthdate"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_Birthdate"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_gender"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_Gender"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_cellphoneno"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_CellphoneNo"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_email"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_Email"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_address"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_Address"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>