<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_MyPhoto"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="@dimen/profile_photo_width"
                    android:layout_height="@dimen/profile_photo_height"
                    android:src="@drawable/persion_icon" />
                <ImageView
                    android:id="@+id/iv_selectPhoto"
                    android:src="@android:drawable/ic_menu_camera"
                    android:onClick="onSelectMyPhotoClick"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_Name"
                android:hint="Enter Your Name"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="26sp"
                android:textColor="#333333"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/privateInfoGroup"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- 이곳에 개인신상 정보를 보여준다 -->
                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_birthdate"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_Birthdate"
                        android:singleLine="true"
                        android:hint="1995년 12월 25일"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_gender"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_Gender"
                        android:hint="여자"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:singleLine="true"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_cellphoneno"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_CellphoneNo"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:hint="휴대폰번호"
                        android:singleLine="true"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_email"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_Email"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:hint="example@daelim.ac.kr"
                        android:singleLine="true"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/text_address"
                        android:textSize="16sp"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_Address"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>